--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="about-image">
 
-            <img src="/veeraprofile.jpg "  width="400px"; height="400px";><alt="Profile Image>
+            <img src="veeraprofile.jpg "  width="400px"; height="400px";><alt="Profile Image>
         </div>
     </section>
 
@@ -57,7 +57,7 @@
         </div>
         <div class="about-content">
             <div class="about-image">
-                <img src="/WhatsApp Image 2025-04-17 at 14.11.51_e3c4bbd2.jpg" width="300px" height="400px"><About Me Image>
+                <img src="WhatsApp Image 2025-04-17 at 14.11.51_e3c4bbd2.jpg" width="300px" height="400px"><About Me Image>
             </div>
             <div class="about-text">
                 <h3>Who am I?</h3>
